GWDP-656 Fixed jumpiness. Still need to decide about sort marker, sort on narrow columns.

--- a/src/main/webapp/assets/ngwmn_ext_skin/xtheme-ngwmn.css
+++ b/src/main/webapp/assets/ngwmn_ext_skin/xtheme-ngwmn.css
@@ -729,6 +729,7 @@ body.x-body-masked .x-window-mc, body.x-body-masked .x-window-plain .x-window-mc
 }
 .x-grid3-hd-inner {
 	border-bottom: 3px solid #72665C;
+	padding-bottom: 1px;
 }
 td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-asc .x-grid3-hd-inner, td.x-grid3-hd-menu-open .x-grid3-hd-inner {
 	border-bottom: 3px solid #CEE56A;
